Ensure spacing between component page tabs and content below

--- a/site/src/components/keyboard-controls/KeyboardControls.module.css
+++ b/site/src/components/keyboard-controls/KeyboardControls.module.css
@@ -1,6 +1,5 @@
 .table {
   table-layout: initial;
-  margin-top: calc(2 * var(--salt-size-unit));
   margin-bottom: calc(2 * var(--salt-size-unit));
 }
 
